KH-251: Fix frontpage checkbox alignment.

--- a/koodisto-ui/src/main/webapp/css/other.css
+++ b/koodisto-ui/src/main/webapp/css/other.css
@@ -407,7 +407,6 @@ li.uiCollapsed.mjs-nestedSortable-hovering div {
 }
 
 label, .label {
-    line-height: 2em;
     display: inline !important;
     color: inherit !important;
     background-color: inherit !important;
